--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
     <title>My Showcase Website</title>
 </head>
+<style> 
+    .hero {
+        color: rgb(0,0,0);
+    }
+</style>
 <!-- This is the main body of the website- ALL your content goes AFTER the <body> tag and before the </body> tag -->
 <body>
 
