--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <style> 
     .hero {
-        color: rgb(0,0,0);
+        color: rgb(255, 251, 251);
     }
 </style>
 <!-- This is the main body of the website- ALL your content goes AFTER the <body> tag and before the </body> tag -->
@@ -31,15 +31,15 @@
         <div class="topic-content">
             <!-- one "card" which includes an image with a text below it -->
             <div class="topic-card">
-                <img src="images/placeholder-1024x1024.png" alt="change this too!">
+                <img src="images/mickey mouse.png" alt="change this too!" height>
+                <h2 class="topic-card-text">Mickey Mouse Gimp GreenScreen Creation</h2>
+            </div>
+            <div class="topic-card">
+                <img src="images/mickey mouse.png" alt="change this too!">
                 <h2 class="topic-card-text">Placeholder image</h2>
             </div>
             <div class="topic-card">
-                <img src="images/placeholder-1024x1024.png" alt="change this too!">
-                <h2 class="topic-card-text">Placeholder image</h2>
-            </div>
-            <div class="topic-card">
-                <img src="images/placeholder-1024x1024.png" alt="change this too!">
+                <img src="images/mickey mouse.png" alt="change this too!">
                 <h2 class="topic-card-text">Placeholder image</h2>
             </div>
         </div>
