--- a/index.html
+++ b/index.html
@@ -35,17 +35,40 @@
                 <h2 class="topic-card-text">Mickey Mouse Gimp GreenScreen Creation</h2>
             </div>
             <div class="topic-card">
-                <img src="images/mickey mouse.png" alt="change this too!">
+                <img src="images/placeholder-1024x1024.png" alt="change this too!">
                 <h2 class="topic-card-text">Placeholder image</h2>
             </div>
             <div class="topic-card">
-                <img src="images/mickey mouse.png" alt="change this too!">
+                <img src="images/placeholder-1024x1024.png" alt="change this too!">
                 <h2 class="topic-card-text">Placeholder image</h2>
             </div>
         </div>
     </section>
 <!-- End of topic one------------------------------------------------------------------------------------------ -->
-
+<!-- Topic two ------------------------------------------------------------------------------------------------- -->
+    <!-- The First Topic Section -->
+    <section class="topic">
+        <!-- the topic title a big bar with text in it -->
+        <div class="topic-title">
+            <h1>Blender Creations</h1>
+        </div>
+        <!-- now a three column grid of images -->
+        <div class="topic-content">
+            <!-- one "card" which includes an image with a text below it -->
+            <div class="topic-card">
+                <img src="images/mickey mouse.png" alt="change this too!" height>
+                <h2 class="topic-card-text">Mickey Mouse Gimp GreenScreen Creation</h2>
+            </div>
+            <div class="topic-card">
+                <img src="images/placeholder-1024x1024.png" alt="change this too!">
+                <h2 class="topic-card-text">Placeholder image</h2>
+            </div>
+            <div class="topic-card">
+                <img src="images/placeholder-1024x1024.png" alt="change this too!">
+                <h2 class="topic-card-text">Placeholder image</h2>
+            </div>
+        </div>
+    </section>
 <!-- Copy and paste the section from above to make your next section -->
 
 
