--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="topic-content">
             <!-- one "card" which includes an image with a text below it -->
             <div class="topic-card">
-                <img src="images/alien.blend" alt="change this too!" height>
+                <img src="images/blender.alien.png" alt="change this too!" height>
                 <h2 class="topic-card-text">Mickey Mouse Gimp GreenScreen Creation</h2>
             </div>
             <div class="topic-card">
