--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <!-- one "card" which includes an image with a text below it -->
             <div class="topic-card">
                 <img src="images/blender.alien.png" alt="change this too!" height>
-                <h2 class="topic-card-text">Mickey Mouse Gimp GreenScreen Creation</h2>
+                <h2 class="topic-card-text">Alien Cafe Blender Project</h2>
             </div>
             <div class="topic-card">
                 <img src="images/placeholder-1024x1024.png" alt="change this too!">
