--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
         <div class="topic-content">
             <!-- one "card" which includes an image with a text below it -->
             <div class="topic-card">
-                <img src="images/blender.alien.png" alt="change this too!" height>
+                <img src="images/blender.alien.png" alt="Alien Cafe Blender Project" height>
                 <h2 class="topic-card-text">Alien Cafe Blender Project</h2>
             </div>
             <div class="topic-card">
-                <img src="images/placeholder-1024x1024.png" alt="change this too!">
+                <img src="images/rocketship.png" alt="change this too!">
                 <h2 class="topic-card-text">Placeholder image</h2>
             </div>
             <div class="topic-card">
