--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <h2 class="topic-card-text">Alien Cafe Blender Project</h2>
             </div>
             <div class="topic-card">
-                <img src="images/rocketship.png" alt="change this too!">
+                <img src="images/rocketship2.png" alt="change this too!">
                 <h2 class="topic-card-text">Placeholder image</h2>
             </div>
             <div class="topic-card">
